# expense-tracker

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  justfile  pyproject.toml  render.yaml  requirements.txt
expense_tracker/: .env  .env.txt
expense_tracker/api/: urls.py
expense_tracker/api/serializers/: categories.py  expenses.py  profile.py  users.py
expense_tracker/api/views/: __init__.py  categories.py  expenses.py  profile.py  users.py
expense_tracker/catalog/: models.py  urls.py
expense_tracker/catalog/migrations/: 0002_expense.py  0003_category.py  0004_alter_profile_limit.py
expense_tracker/expense_tracker/: admin.py  apps.py  forms.py  mixins.py  models.py  servers.py  settings.py  urls.py  utils.py  views.py
expense_tracker/expense_tracker/migrations/: 0001_initial.py  0002_expense.py  0003_category.py  0004_alter_profile_limit.py  0005_alter_expense_amount.py  0006_rename_name_category_namecat.py  0007_rename_namecat_category_name.py  0008_profile_limit_flag.py  0009_alter_category_name.py  0010_profile_categories.py  0011_alter_category_expense_alter_category_user.py  0012_alter_profile_categories.py  0013_alter_profile_categories.py  0014_alter_profile_categories.py  0015_alter_category_expense.py  0016_alter_category_expense.py  0017_alter_category_user.py  0018_remove_category_user_alter_profile_categories.py  0019_alter_profile_categories.py  0020_alter_category_id.py  0021_alter_category_id.py  (+25 more)
expense_tracker/mysite/: settings.py  urls.py
expense_tracker/settings/: asgi.py  settings.py  urls.py  wsgi.py
(+38 files in other folders)
